Added animations to contents of modules in the main page.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <!-- Dynamic module generator -->
     <script src="dynamic-modules.js"></script>
 
+    <script src="animation.js"></script>
     <!-- Theme toggle functionality -->
     <script>
         // Theme toggle (updated to work without localStorage for Claude environment)
