Added stylish links and fixed the modal image view.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
     <script src="script.js"></script>
     <!-- Dynamic module generator -->
     <script src="dynamic-modules.js"></script>
-
+    
+    <script src="dynamic-glistening.js"></script>
+    
     <script src="animation.js"></script>
+
     <!-- Theme toggle functionality -->
     <script>
         // Theme toggle (updated to work without localStorage for Claude environment)
