--- a/pages/subtopic1.html
+++ b/pages/subtopic1.html
@@ -84,6 +84,8 @@
     <!-- Core functionality scripts -->
     <script src="../script.js"></script>
     <script src="../dynamic-modules.js"></script>
+   
+    <script src="../animation.js"></script>
 
     <!-- Page-specific functionality -->
     <script>
